Revert "best request an order drawer I can muster - still some issues on mobile browsers"
This reverts commit ec2345940ad6583c52da809f4eb1970c3b231648.

--- a/src/views/ProfileEdit.css
+++ b/src/views/ProfileEdit.css
@@ -123,7 +123,7 @@
 }
 
 .pac-logo:after {
-    /* background-image: none; */
+    background-image: none;
 }
 
 /* End Google Autocomplete box */
